# cargo-bug

./: Cargo.toml  README.md
.cargo/: config.toml
demo-a/: Cargo.toml
demo-b/: Cargo.toml
demo-b/src/: lib.rs
